syntax = "proto3";

package aws_service;

option go_package = "../aws_service/protogen";

// AWS service for
service AWS {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}